# beauty-store

./: .gitignore  =3.0.0  Dockerfile  README.md  SETUP.md  docker-compose.yml
backend/: app.py  enrich_catalog.py  load_products.py  pyproject.toml  ranking_model.py  requirements.txt  search_engine.py  setup_db.py  test_context.py  test_queries.py
data/: catalog.parquet  clean_products.json  enriched_products.json  products.index
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/products/[id]/: route.ts
frontend/app/api/products/featured/: route.ts
frontend/app/api/products/search/: route.ts
frontend/app/cart/: page.tsx
frontend/app/explore/: page.tsx
frontend/app/product/[id]/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: AIChat.tsx  FeaturedProducts.tsx  GlowingCursor.tsx  Navbar.tsx  SearchBar.tsx
frontend/lib/: cartStore.ts  firebase.ts
