[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "syrine"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (==0.115.0)",
    "uvicorn (==0.30.0)",
    "python-multipart (==0.0.12)",
    "sqlalchemy (==2.0.23)",
    "psycopg2-binary (==2.9.9)",
    "pgvector (==0.2.5)",
    "psycopg (>=3.1.0)",
    "psycopg-pool (>=3.2.0)",
    "torch (==2.2.2)",
    "sentence-transformers (==2.7.0)",
    "faiss-cpu (==1.8.0)",
    "groq (==0.19.0)",
    "transformers (>=4.38.0)",
    "numpy (>=1.26,<2)",
    "pandas (>=2.1.0)",
    "pyarrow (>=17.0.0)",
    "python-dotenv (==1.0.0)",
    "firebase-admin (==6.5.0)",
    "tqdm (>=4.66.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
